[gd_scene load_steps=2 format=3 uid="uid://boyik7srki0ll"]

[ext_resource type="Script" path="res://class_regions/class_region_header.gd" id="1_75m0i"]

[node name="ClassRegionHeader" type="HBoxContainer"]
script = ExtResource("1_75m0i")

[node name="HideShowBtn" type="CheckButton" parent="."]
layout_mode = 2
tooltip_text = "Show/Hide region content"
button_pressed = true

[node name="space" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Space1xBtn" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"SmallBtn"
text = "1x"

[node name="Space1_5xBtn" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"SmallBtn"
text = "1.5x"

[node name="Space2xBtn" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"SmallBtn"
text = "2x"

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SubLabel"
text = "Variables"
horizontal_alignment = 2
vertical_alignment = 1
